Update and rename index.php to index.html

--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <title>Demo</title>
+     <title>Wedding Demo</title>
+	
   <!-- main css -->
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <!-- responsive css -->
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
-  
   <!-- default skin -->
   <link rel="stylesheet" class="alternate-style" type="text/css" href="css/skins/lavender.css">
-  
-    <!-- boxicons css -->
+  <!-- boxicons css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-
-    <!-- lightgallery css -->
+  <!-- lightgallery css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightgallery-js/1.4.0/css/lightgallery.min.css"/>
   
     <!--Animasi-->
